assets/scss/components/_mainContent.scss
.main-content{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
    grid-column: 1/3;
    .img-container{
        background-image: url(#{$baseURL}/assets/images/image-web-3-desktop.jpg);
        background-repeat: no-repeat;
        background-size: cover;
        background-position: center;
        width: 100%;
        height: 100%;
        flex: 1;
        min-height: 30rem;
        max-height: 30rem;

        @include desktop{
            min-height: 10rem;

        }
        @include desktopLarge{
            min-height: 35rem;

        }
    }
    .text-container{
        display: flex;
        flex-direction: column;
        gap: 1rem;
        margin-top: 2rem;
        flex: 1;
        .wrapper-title__text{
            flex: 1;
            align-self: center;
            width: 100%;
            
        }
        &__title{
            font-size: 5rem;
            line-height: 1.2;
            font-family: $fuentePrincipal;
            font-weight: 900;
            margin: 0;
            text-align: start;
            @include desktopLarge{
                font-size: 6rem;
            }
        }
        &__content{
            display: flex;
            flex-direction: column;
            justify-content: space-between;
            font-family: $fuentePrincipal;
            flex: 1;
            min-width: 35rem;

            &__text{
                font-size: 1.8rem;
            }

            &__link{
                background-color: $colorPrimarioRojo;
                color: $colorBlanco;
                text-decoration: none;
                text-align: center;
                padding: 1rem 2rem;
                width: 50%;
                text-transform: uppercase;
                letter-spacing: .6rem;
                font-size: 1.2rem;
                font-weight: 600;

                &:hover{
                    background-color: $colorGrisOscuro2;
                }
            }
        }
        @include desktop{
            flex-direction: row;
        }
        
    }

}

